# sci-listen

./: .gitignore  PROJECT_STRUCTURE.md  README.md  index.html  install-desktop.sh  pyproject.toml  railway.json  requirements.txt  sci-listen.md  start.sh  test.py  vercel.json
api/: api_server.py  working_api.py
desktop/: main.js  package.json
docs/: api_call_explanation.md
tests/: simple_test.py  test_api.py
web/: enhanced_sci_listen.html  simple_sci_listen.html
