[project]
name = "sci-listen"
version = "1.0.0"
description = "智能会议助手"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "flask-cors",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "api.working_api:app"